--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "nodemon --watch src src/server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && run build"
   },
+  "engines": {
+    "node": "10.16.0"
+  },
   "author": "Anthony Gallegos <anthony.bottega.codes@gmail.com> (https://github.com/Anthonyg6)",
   "license": "ISC",
   "dependencies": {
